--- a/五级标签/五级标签.md
+++ b/五级标签/五级标签.md
@@ -15,9 +15,207 @@
 {
     "code": 1,       // 1:成功   0：失败
 	"msg": "提示信息", 
-	"data": [{
-		"fieldA": "",  // xxx
-		"fieldB": "    // xxx
-	}]
+	"data": [
+        {
+          id: 1,
+          name: "农、林、牧、渔",
+          secList: [
+            {
+              id: 11,
+              name: "农业",
+              thiList: [
+                {
+                  id: 111,
+                  name: "谷物种植"
+                },
+                {
+                  id: "112",
+                  name: "豆类、油料和薯类种植"
+                },
+                {
+                  id: "113",
+                  name: "棉、麻、糖、烟草种植"
+                },
+                {
+                  id: "114",
+                  name: "蔬菜、食用菌及园艺作物种植"
+                },
+                {
+                  id: "115",
+                  name: "水果种植"
+                },
+                {
+                  id: "116",
+                  name: "坚果、含油果、香料和饮料作物种植"
+                },
+                {
+                  id: "117",
+                  name: "中药材种植"
+                },
+                {
+                  id: "118",
+                  name: "其他农业"
+                }
+              ]
+            },
+            {
+              id: 12,
+              name: "林业"
+            },
+            {
+              id: 13,
+              name: "畜牧业"
+            },
+            {
+              id: 14,
+              name: "渔业"
+            },
+            {
+              id: 15,
+              name: "农、林、牧、渔服务业"
+            }
+          ]
+        },
+        {
+          id: 2,
+          name: "采矿业",
+          secList: [
+            {
+              id: 21,
+              name: "煤炭开采和洗选业",
+              thiList: [
+                {
+                  id: 111,
+                  name: "谷物种植"
+                },
+                {
+                  id: "112",
+                  name: "豆类、油料和薯类种植"
+                },
+                {
+                  id: "113",
+                  name: "棉、麻、糖、烟草种植"
+                },
+                {
+                  id: "114",
+                  name: "蔬菜、食用菌及园艺作物种植"
+                },
+                {
+                  id: "115",
+                  name: "水果种植"
+                },
+                {
+                  id: "116",
+                  name: "坚果、含油果、香料和饮料作物种植"
+                },
+                {
+                  id: "117",
+                  name: "中药材种植"
+                },
+                {
+                  id: "118",
+                  name: "其他农业"
+                }
+              ]
+            },
+            {
+              id: 22,
+              name: "石油和天然气开采业"
+            },
+            {
+              id: 23,
+              name: "黑色金属矿采选业"
+            },
+            {
+              id: 24,
+              name: "有色金属矿采选业"
+            },
+            {
+              id: 25,
+              name: "非金属矿采选业"
+            },
+            {
+              id: 26,
+              name: "开采辅助活动"
+            },
+            {
+              id: 27,
+              name: "其他采矿业"
+            }
+          ]
+        },
+        {
+          id: 3,
+          name: "制造业"
+        },
+        {
+          id: 4,
+          name: "电力、热力、燃气及水生产和供应业"
+        },
+        {
+          id: 5,
+          name: "建筑业"
+        },
+        {
+          id: 6,
+          name: "批发和零售业"
+        },
+        {
+          id: 7,
+          name: "交通运输、仓储和邮政业"
+        },
+        {
+          id: 8,
+          name: "住宿和餐饮业"
+        },
+        {
+          id: 9,
+          name: "信息传输、软件和信息技术服务业"
+        },
+        {
+          id: 10,
+          name: "金融业"
+        },
+        {
+          id: 11,
+          name: "房地产业"
+        },
+        {
+          id: 12,
+          name: "租赁和商务服务业"
+        },
+        {
+          id: 13,
+          name: "科学研究和技术服务业"
+        },
+        {
+          id: 14,
+          name: "水利、环境和公共设施管理业"
+        },
+        {
+          id: 15,
+          name: "居民服务、修理和其他服务业"
+        },
+        {
+          id: 16,
+          name: "教育"
+        },
+        {
+          id: 17,
+          name: "卫生和社会工作"
+        },
+        {
+          id: 18,
+          name: "文化、体育和娱乐业"
+        },
+        {
+          id: 19,
+          name: "公共管理、社会保障和社会组织"
+        },
+        {
+          id: 20,
+          name: "国际组织"
+        }
+      ],
 }
 ```
