--- a/五级标签/五级标签.md
+++ b/五级标签/五级标签.md
@@ -1,4 +1,4 @@
-- 描述：登录
+- 描述：获取 1 2 3级标签
 - 地址：/productType/getThreeList
 - 类型：POST
 - 数据类型：application/json
@@ -2468,5 +2468,181 @@
         }
     ],
     "msg":"成功"
+}
+```
+
+- 描述：根据三级菜单id获取到4 5 级菜单
+- 地址：/productType/getListByThreeId
+- 类型：POST
+- 数据类型：application/json
+- 请求头：xxx
+
+- 请求体：
+```javascript
+{
+    "id":"A011X000A",
+}
+```
+
+- 响应
+```javascript
+{
+	"code": 1,
+	"data": [{
+		"fiveList": [{
+			"name": "水稻",
+			"id": "A0111001A"
+		}, {
+			"name": "旱稻",
+			"id": "A0111002A"
+		}],
+		"name": "稻谷种植",
+		"id": "A0111000A"
+	}, {
+		"name": "小麦种植",
+		"id": "A0112000A"
+	}, {
+		"name": "玉米种植",
+		"id": "A0113000A"
+	}, {
+		"fiveList": [{
+			"name": "谷子",
+			"id": "A0119001A"
+		}, {
+			"name": "高粱",
+			"id": "A0119002A"
+		}, {
+			"name": "大麦",
+			"id": "A0119003A"
+		}, {
+			"name": "燕麦",
+			"id": "A0119004A"
+		}, {
+			"name": "荞麦",
+			"id": "A0119005A"
+		}, {
+			"name": "糜子",
+			"id": "A0119006A"
+		}, {
+			"name": "紫米",
+			"id": "A0119007A"
+		}, {
+			"name": "薏苡",
+			"id": "A0119008A"
+		}],
+		"name": "其他谷物种植",
+		"id": "A0119000A"
+	}],
+	"msg": "成功"
+}
+```
+
+- 描述：根据id获取到菜单详情
+- 地址：/productType/getProductTypeById
+- 类型：POST
+- 数据类型：application/json
+- 请求头：xxx
+
+- 请求体：
+```javascript
+{
+    "id":"A011X000A",
+}
+```
+
+- 响应
+```javascript
+{
+	"code": 1,
+	"data": {
+		"classDesc": "谷物种植",  
+		"classLevel": 3,       等级
+		"className": "谷物种植",  名称
+		"createTime": 1552443776000,  创建时间
+		"createUserId": 1,    创建人id
+		"id": "A011X000A",    id
+		"idPaths": "AXXXX000Z,A01XX000A",    
+		"isValide": 1,     是否启用  1启用
+		"keywords": "谷物种植，种植，谷物",   关键字
+		"parentId": "A01XX000A",    父类id
+		"sortNumber": 1,   序号
+		"updateUserId": 0
+	},
+	"msg": "成功"
+}
+```
+
+
+- 描述：根据父类id获取到下一级标签
+- 地址：/productType/getListByParentId
+- 类型：POST
+- 数据类型：application/json
+- 请求头：xxx
+
+- 请求体：
+```javascript
+{
+    "id":"A011X000A"
+}
+```
+
+- 响应
+```javascript
+{
+	"code": 1,
+	"data": [{
+		"classDesc": "稻谷种植",
+		"classLevel": 4,
+		"className": "稻谷种植",
+		"createTime": 1552443776000,
+		"createUserId": 1,
+		"id": "A0111000A",
+		"idPaths": "AXXXX000Z,A01XX000A,A011X000A",
+		"isValide": 1,
+		"keywords": "稻谷种植，稻谷，稻",
+		"parentId": "A011X000A",
+		"sortNumber": 1,
+		"updateUserId": 0
+	}, {
+		"classDesc": "小麦种植",
+		"classLevel": 4,
+		"className": "小麦种植",
+		"createTime": 1552443776000,
+		"createUserId": 1,
+		"id": "A0112000A",
+		"idPaths": "AXXXX000Z,A01XX000A,A011X000A",
+		"isValide": 1,
+		"keywords": "小麦种植，小麦",
+		"parentId": "A011X000A",
+		"sortNumber": 2,
+		"updateUserId": 0
+	}, {
+		"classDesc": "玉米种植",
+		"classLevel": 4,
+		"className": "玉米种植",
+		"createTime": 1552443776000,
+		"createUserId": 1,
+		"id": "A0113000A",
+		"idPaths": "AXXXX000Z,A01XX000A,A011X000A",
+		"isValide": 1,
+		"keywords": "玉米种植，玉米",
+		"parentId": "A011X000A",
+		"sortNumber": 3,
+		"updateUserId": 0
+	}, {
+		"classDesc": "其他谷物种植",
+		"classLevel": 4,
+		"className": "其他谷物种植",
+		"createTime": 1552443776000,
+		"createUserId": 1,
+		"id": "A0119000A",
+		"idPaths": "AXXXX000Z,A01XX000A,A011X000A",
+		"isValide": 1,
+		"keywords": "其他谷物种植",
+		"parentId": "A011X000A",
+		"sortNumber": 4,
+		"updateUserId": 0
+	}],
+	"msg": "成功"
 }
 ```
