--- a/五级标签/五级标签.md
+++ b/五级标签/五级标签.md
@@ -2529,3 +2529,39 @@
 	"msg": "成功"
 }
 ```
+
+
+- 描述：根据id获取到父级信息
+- 地址：/productType/getParentById
+- 类型：POST
+- 数据类型：application/json
+- 请求头：xxx
+
+- 请求体：
+```javascript
+{
+    "id":"A0111000A"
+}
+```
+
+- 响应
+```javascript
+{
+	"code": 1,
+	"data": [{
+		"classDesc": "谷物种植",
+		"classLevel": 3,
+		"className": "谷物种植",
+		"createTime": 1552443776000,
+		"createUserId": 1,
+		"id": "A011X000A",
+		"idPaths": "AXXXX000Z,A01XX000A",
+		"isValide": 1,
+		"keywords": "谷物种植，种植，谷物",
+		"parentId": "A01XX000A",
+		"sortNumber": 1,
+		"updateUserId": 0
+	}],
+	"msg": "成功"
+}
+```
